# libxlio

./: .code-critic.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES  Doxyfile  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  generate_docs.py  greptile.json
.ci/: Jenkinsfile  (+14 more)
docs/man/: Makefile.am  xlio.7.in  xlio_stats.8.in  xliod.8.in
src/core/: Makefile.am  config_printer.cpp  config_printer.h  config_scanner.c  libxlio.c  main.cpp  main.h  tuning_report_printer.cpp  tuning_report_printer.h  xlio.h  xlio_extra.h  xlio_types.h
src/core/config/: README.md  change_reason.h  config.h  config_bundle.h  config_manager.cpp  config_manager.h  config_provider.h  config_registry.cpp  config_registry.h  config_strings.cpp  config_strings.h  config_var_definitions.h  config_var_info.h  generate_mappings.py  json_object_handle.cpp  json_object_handle.h  json_utils.cpp  json_utils.h  mappings.py  runtime_registry.cpp  runtime_registry.h  string_utils.cpp  string_utils.h
src/core/config/descriptor_providers/: descriptor_provider.h  json_descriptor.json  json_descriptor_provider.cpp  json_descriptor_provider.h  libxlio_config.json  schema_analyzer.cpp  schema_analyzer.h  xlio_config_schema.json
src/core/config/descriptors/: config_descriptor.cpp  config_descriptor.h  (+2 more)
src/core/dev/: allocator.cpp  allocator.h  buffer_pool.cpp  buffer_pool.h  cq_mgr.cpp  cq_mgr.h  cq_mgr.inl  cq_mgr_mlx5.cpp  cq_mgr_mlx5.h  cq_mgr_mlx5.inl  cq_mgr_mlx5_strq.cpp  cq_mgr_mlx5_strq.h  cq_mgr_regrq.cpp  cq_mgr_regrq.h  cq_mgr_rx.cpp  cq_mgr_rx.h  cq_mgr_rx.inl  cq_mgr_rx_dummy.cpp  cq_mgr_rx_dummy.h  cq_mgr_rx_inl.h  cq_mgr_rx_regrq.cpp  cq_mgr_rx_regrq.h  cq_mgr_rx_strq.cpp  cq_mgr_rx_strq.h  cq_mgr_strq.cpp  cq_mgr_strq.h  cq_mgr_tx.cpp  cq_mgr_tx.h  dm_mgr.cpp  dm_mgr.h  gro_mgr.cpp  gro_mgr.h  hw_queue_rx.cpp  hw_queue_rx.h  hw_queue_tx.cpp  hw_queue_tx.h  ib_ctx_handler.cpp  ib_ctx_handler.h  ib_ctx_handler_collection.cpp  ib_ctx_handler_collection.h  (+55 more)
src/core/event/: command.h  delta_timer.cpp  delta_timer.h  entity_context.cpp  entity_context.h  entity_context_manager.cpp  entity_context_manager.h  event.h  event_handler_ibverbs.h  event_handler_manager.cpp  event_handler_manager.h  event_handler_manager_local.cpp  event_handler_manager_local.h  event_handler_rdma_cm.h  job_queue.h  netlink_event.cpp  netlink_event.h  poll_group.cpp  poll_group.h  thread_local_event_handler.cpp  thread_local_event_handler.h  timer_handler.h  timers_group.h  vlogger_timer_handler.cpp  vlogger_timer_handler.h  worker_thread.cpp  worker_thread.h  worker_thread_manager.cpp  worker_thread_manager.h
src/core/fairness/: CMakeLists.txt  ring_tx_scheduler_interface.h  sockinfo_tx_scheduler_interface.h  tx_fifo_scheduler.cpp  tx_fifo_scheduler.h  tx_round_robin_scheduler.cpp  tx_round_robin_scheduler.h  tx_scheduler.cpp  tx_scheduler.h  tx_scheduler_test.cpp
src/core/infra/: DemoCollMgr.cpp  DemoCollMgr.h  DemoObserver.cpp  DemoObserver.h  DemoSubject.cpp  DemoSubject.h  cache_subject_observer.h  main.cpp  sender.cpp  sender.h  sender_info_dst.cpp  sender_info_dst.h  subject_observer.cpp  subject_observer.h
src/core/iomux/: epfd_info.cpp  epfd_info.h  epoll_wait_call.cpp  epoll_wait_call.h  io_mux_call.cpp  io_mux_call.h  poll_call.cpp  poll_call.h  select_call.cpp  select_call.h
src/core/lwip/: cc.c  cc.h  cc_cubic.c  cc_cubic.h  cc_lwip.c  cc_none.c  def.h  err.h  init.c  ip_addr.h  opt.h  pbuf.c  pbuf.h  tcp.c  tcp.h  tcp_impl.h  tcp_in.c  tcp_out.c
src/core/netlink/: link_info.cpp  link_info.h  neigh_info.cpp  neigh_info.h  netlink_wrapper.cpp  netlink_wrapper.h  route_info.cpp  route_info.h  test_main.cpp
src/core/proto/: L2_address.cpp  L2_address.h  arp.cpp  arp.h  dst_entry.cpp  dst_entry.h  dst_entry_tcp.cpp  dst_entry_tcp.h  dst_entry_udp.cpp  dst_entry_udp.h  dst_entry_udp_mc.cpp  dst_entry_udp_mc.h  flow_tuple.cpp  flow_tuple.h  header.cpp  header.h  ip_frag.cpp  ip_frag.h  mapping.cpp  mapping.h  mem_buf_desc.h  mem_desc.cpp  mem_desc.h  neighbour.cpp  neighbour.h  neighbour_observer.h  neighbour_table_mgr.cpp  neighbour_table_mgr.h  netlink_socket_mgr.cpp  netlink_socket_mgr.h  nvme_parse_input_args.h  route_entry.cpp  route_entry.h  route_rule_table_key.h  route_table_mgr.cpp  route_table_mgr.h  route_val.cpp  route_val.h  rule_entry.cpp  rule_entry.h  (+7 more)
src/core/sock/: bind_no_port.cpp  bind_no_port.h  cleanable_obj.h  fd_collection.cpp  fd_collection.h  pipeinfo.cpp  pipeinfo.h  pkt_rcvr_sink.h  pkt_sndr_source.h  sock-app.cpp  sock-app.h  sock-extra.cpp  sock-extra.h  sock-redirect-internal.h  sock-redirect.cpp  sock-redirect.h  sock_stats.cpp  sock_stats.h  socket_fd_api.cpp  socket_fd_api.h  sockinfo.cpp  sockinfo.h  sockinfo_nvme.cpp  sockinfo_nvme.h  sockinfo_tcp.cpp  sockinfo_tcp.h  sockinfo_tcp_listen_context.cpp  sockinfo_tcp_listen_context.h  sockinfo_udp.cpp  sockinfo_udp.h  sockinfo_ulp.cpp  sockinfo_ulp.h  tcp_seg_pool.cpp  tcp_seg_pool.h
src/core/util/: agent.cpp  agent.h  agent_def.h  cached_obj_pool.h  chunk_list.h  config_parser.y  config_scanner.l  data_updater.cpp  data_updater.h  hugepage_mgr.cpp  hugepage_mgr.h  if.h  instrumentation.cpp  instrumentation.h  ip_address.h  libxlio.conf  libxlio.h  list.h  match.cpp  sg_array.h  sharded_map.h  sock_addr.h  sys_vars.cpp  sys_vars.h  sys_vars_configurator.cpp  sys_vars_configurator.h  sys_vars_types.h  sysctl_reader.h  to_str.h  utils.cpp  utils.h  valgrind.h  vtypes.h  wakeup.cpp  wakeup.h  wakeup_pipe.cpp  wakeup_pipe.h  xlio_exception.h  xlio_idle_cpu.cpp  xlio_idle_cpu.h  (+3 more)
src/vlogger/: Makefile.am  main.cpp  vlogger.cpp  vlogger.h
tests/unit_tests/: Makefile.am  main.cpp
tests/unit_tests/config/: config_descriptor.cpp  config_manager.cpp  config_registry.cpp  inline_loader.cpp  json_descriptor_provider.cpp  json_loader.cpp  key_resolver.cpp  parameter_descriptor.cpp  schema_analyzer.cpp  utils.h
tests/unit_tests/job_queue/: job_queue_test.cpp
tools/daemon/: Makefile.am  bitmap.h  daemon.c  daemon.h  flow.c  hash.c  hash.h  loop.c  message.c  nl.c  nl.h  notify.c  store.c  tc.c  tc.h
(+634 files in other folders)
